finished section-about

--- a/index.html
+++ b/index.html
@@ -23,7 +23,42 @@
             <a href="#" class="btn btn--white btn--animated">Discover more <i class="fas fa-dove"></i></a>
         </div>
     </header>
-    <section class="grid-test">
+
+    <main>
+        <section class="section-about">
+            <div class="u-center-text u-margin-bottom-large">
+                <h2 class="heading-secondary">
+                    Journey into the Animal universe
+                </h2>
+            </div>
+
+            <div class="row">
+                <div class="col-1-of-2">
+                    <h3 class="heading-tertiary u-margin-bottom-small">Close look at animal behaviour</h3>
+                    <p class="paragraph">
+                        Crocodiles have the strongest bite of any animal in the world. The muscles that open their jaws however are not so powerful, reasonably strong people could hold a crocodiles jaw closed with their bare hands
+                    </p>
+
+                    <h3 class="heading-tertiary u-margin-bottom-small">Covering huge range of species of flora and fauna</h3>
+                    <p class="paragraph">
+                        Foxes are the only type of dog capable of retracting their claws like cats do. Foxes also have vertical pupils that look more like those of cats than the rounded pupils that other dogs have.
+                    </p>
+
+                    <a href="#" class="btn-text">Learn more <i class="fas fa-angle-double-right"></i></a>
+                    
+                </div>
+                <div class="col-1-of-2">
+                    <div class="composition">
+                        <img src="img/crocodile.jpg" alt="crocodile" class="composition__photo composition__photo--p1">
+                        <img src="img/fox.jpg" alt="fox" class="composition__photo composition__photo--p2">
+                        <img src="img/white-dog.jpg" alt="white-dog" class="composition__photo composition__photo--p3">
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    
+    <!-- <section class="grid-test">
         <div class="row">
             <div class="col-1-of-2">
                 Col 1 of 2
@@ -36,10 +71,55 @@
             <div class="col-1-of-3">
                 Col 1 of 3
             </div>
+            <div class="col-1-of-3">
+                Col 1 of 3
+            </div>
+            <div class="col-1-of-3">
+                Col 1 of 3
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-1-of-3">
+                Col 1 of 3
+            </div>
             <div class="col-2-of-3">
                 Col 2 of 3
             </div>
         </div>
-    </section>
+        <div class="row">
+            <div class="col-1-of-4">
+                Col 1 of 4
+            </div>
+            <div class="col-1-of-4">
+                Col 1 of 4
+            </div>
+            <div class="col-1-of-4">
+                Col 1 of 4
+            </div>
+            <div class="col-1-of-4">
+                Col 1 of 4
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-1-of-4">
+                Col 1 of 4
+            </div>
+            <div class="col-1-of-4">
+                Col 1 of 4
+            </div>
+            <div class="col-2-of-4">
+                Col 2 of 4
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-1-of-4">
+                Col 1 of 4
+            </div>
+            <div class="col-3-of-4">
+                Col 3 of 4
+            </div>
+        </div> 
+    </section> -->
+
 </body>
 </html>
