added subscription-type section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>AnimalifeTV | Dive into world of amazement</title>
 </head>
 <body>
+    <!-- Header -->
     <header class="header">
         <div class="header__logo-box">
             <img src="img/logo-black-without-text.png" alt="Logo" class="header__logo">
@@ -25,6 +26,7 @@
     </header>
 
     <main>
+        <!-- About -->
         <section class="section-about">
             <div class="u-center-text u-margin-bottom-large">
                 <h2 class="heading-secondary">
@@ -54,6 +56,172 @@
                         <img src="img/white-dog.jpg" alt="white-dog" class="composition__photo composition__photo--p3">
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <!-- Features - Section -->
+
+        <section class="section-features">
+            <div class="row">
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <img class="feature-box__icon" src="img/high-definition.svg" />
+                        <h3 class="heading-tertiary u-margin-bottom-small">High Definition</h3>
+                        <p class="feature-box__text">
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur fugit ullam eius nisi officiis consequatur, eos esse! Laudantium eaque architecto accusamus 
+                        </p>
+                    </div>
+                </div>
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <img class="feature-box__icon" src="img/new.svg" />
+                        <h3 class="heading-tertiary u-margin-bottom-small">Always New</h3>
+                        <p class="feature-box__text">
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur fugit ullam eius nisi officiis consequatur, eos esse! Laudantium eaque architecto accusamus 
+                        </p>
+                    </div>
+                </div>
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <img class="feature-box__icon" src="img/eagle-eye.svg" />
+                        <h3 class="heading-tertiary u-margin-bottom-small">Eagle Eye View</h3>
+                        <p class="feature-box__text">
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur fugit ullam eius nisi officiis consequatur, eos esse! Laudantium eaque architecto accusamus 
+                        </p>
+                    </div>
+                </div>
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <img class="feature-box__icon" src="img/fish.png" />
+                        <h3 class="heading-tertiary u-margin-bottom-small">Ocean World</h3>
+                        <p class="feature-box__text">
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur fugit ullam eius nisi officiis consequatur, eos esse! Laudantium eaque architecto accusamus 
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Types of serials -->
+        <section class="section-serial-type">
+            <div class="u-center-text u-margin-bottom-large">
+                <h2 class="heading-secondary">
+                    Which way do you want to go ?
+                </h2>
+            </div>
+            <div class="row">
+                <div class="col-1-of-3">
+                    <div class="card">
+                        <div class="card__side card__side--front">
+                            <div class="card__picture card__picture--1">
+                                &nbsp;
+                            </div>
+                            <h4 class="card__heading">
+                                <span class="card__heading-span card__heading-span--1">
+                                    Fly in the Sky
+                                </span>
+                            </h4>
+                            <div class="card__details">
+                                <ul>
+                                    <li>100+ hours video</li>
+                                    <li>HD quality</li>
+                                    <li>Story mode</li>
+                                    <li>2 Users a time</li>
+                                    <li>110% zoom available</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card__side card__side--back card__side--back-1">
+                            <div class="card__price-form">
+                                <div class="card__price-box">
+                                    <p class="card__price-only">
+                                        Only
+                                    </p>
+                                    <p class="card__price-value">
+                                        $4.97/mo
+                                    </p>
+                                </div>
+                                <a href="#" class="btn btn--white">Subscribe Now!</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-1-of-3">
+                    <div class="card">
+                        <div class="card__side card__side--front">
+                            <div class="card__picture card__picture--2">
+                                &nbsp;
+                            </div>
+                            <h4 class="card__heading">
+                                <span class="card__heading-span card__heading-span--2">
+                                    Explore the Earth
+                                </span>
+                            </h4>
+                            <div class="card__details">
+                                <ul>
+                                    <li>1K+ hours video</li>
+                                    <li>4K quality</li>
+                                    <li>Story mode</li>
+                                    <li>4 Users a time</li>
+                                    <li>120% zoom available</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card__side card__side--back card__side--back-2">
+                            <div class="card__price-form">
+                                <div class="card__price-box">
+                                    <p class="card__price-only">
+                                        Only
+                                    </p>
+                                    <p class="card__price-value">
+                                        $9.97/mo
+                                    </p>
+                                </div>
+                                <a href="#" class="btn btn--white">Subscribe Now!</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-1-of-3">
+                    <div class="card">
+                        <div class="card__side card__side--front">
+                            <div class="card__picture card__picture--3">
+                                &nbsp;
+                            </div>
+                            <h4 class="card__heading">
+                                <span class="card__heading-span card__heading-span--3">
+                                    Bubble in Ocean
+                                </span>
+                            </h4>
+                            <div class="card__details">
+                                <ul>
+                                    <li>10K+ hours video</li>
+                                    <li>8K quality</li>
+                                    <li>Story mode</li>
+                                    <li>5 Users a time</li>
+                                    <li>150% zoom available</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card__side card__side--back card__side--back-3">
+                            <div class="card__price-form">
+                                <div class="card__price-box">
+                                    <p class="card__price-only">
+                                        Only
+                                    </p>
+                                    <p class="card__price-value">
+                                        $15.97/mo
+                                    </p>
+                                </div>
+                                <a href="#" class="btn btn--white">Subscribe Now!</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="u-center-text u-margin-top-xl">
+                <a href="#" class="btn btn--blue">Get a Demo</a>
             </div>
         </section>
     </main>
