added stories section

--- a/index.html
+++ b/index.html
@@ -224,6 +224,61 @@
                 <a href="#" class="btn btn--blue">Get a Demo</a>
             </div>
         </section>
+
+        <section class="section-testimonials">
+            <div class="bg-video">
+                <video class="bg-video__content" autoplay muted loop>
+                    <source src="img/bg-video-2.mp4" type="video/mp4">
+                        Video not supported by browser!
+                </video>
+            </div>
+            <div class="u-center-text u-margin-bottom-large">
+                <h2 class="heading-secondary">
+                    Expressions make us human beings
+                </h2>
+            </div>
+
+            <div class="row">
+                <div class="story">
+                    <figure class="story__image-shape">
+                        <img class="story__user-image" src="img/Peter-Anderson.jpg" alt="peterAnderson">
+                        <figcaption class="story__image-caption">
+                            Peter Anderson
+                        </figcaption>
+                    </figure>
+                    <div class="story__text">
+                        <h4 class="story__heading heading-tertiary u-margin-bottom-small">
+                            The best wildlife film I have seen
+                        </h4>
+                        <p class="story__content">
+                            Bravo. However a special accolade must go to the music and the choice of it.
+                            The best wildlife film I have seen, particularly of this Region. Please continue and again bravo.Needless to say we are extremely satisfied with the results. I couldn't have asked for more than this. I will let my mum know about this, she could really make use of Animalife TV!
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="story">
+                    <figure class="story__image-shape">
+                        <img class="story__user-image" src="img/Lilly-Potter.jpg" alt="Lilly-Potter">
+                        <figcaption class="story__image-caption">
+                            Lilly Potter
+                        </figcaption>
+                    </figure>
+                    <div class="story__text">
+                        <h4 class="story__heading heading-tertiary u-margin-bottom-small">
+                            Watch the animals from a close look
+                        </h4>
+                        <p class="story__content">
+                            Brings you all kinds of stories focused on humans and animals alike and their latest series fits that mold perfectly.This is one of the best channels on television to know about the animal life. I love to watch the animals from a close look and to know about them, about their history. I always looked for these types of channels to gain knowledge about the animals, about their historic life, about their past generations and much more.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="u-center-text u-margin-top-xl">
+                <a href="#" class="btn-text">More Stories &rarr;</a>
+            </div>
+        </section>
     </main>
     
     <!-- <section class="grid-test">
