--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             </div>
         </section>
 
-        <!-- Types of serials -->
+        <!-- Types of subscription -->
         <section class="section-serial-type">
             <div class="u-center-text u-margin-bottom-large">
                 <h2 class="heading-secondary">
@@ -225,6 +225,7 @@
             </div>
         </section>
 
+        <!-- Testimonials -->
         <section class="section-testimonials">
             <div class="bg-video">
                 <video class="bg-video__content" autoplay muted loop>
@@ -279,7 +280,83 @@
                 <a href="#" class="btn-text">More Stories &rarr;</a>
             </div>
         </section>
+
+        <section class="section-contact">
+            <div class="row">
+                <div class="contact">
+                    <div class="contact__form">
+                        <div class="u-center-text u-margin-bottom-medium">
+                            <h2 class="heading-secondary">
+                                Contact Us
+                            </h2>
+                        </div>
+                        <form action="#" class="form">
+                            <div class="form__group">
+                                <input type="text" class="form__input" id="name" placeholder="Name" required>
+                                <label for="name" class="form__label">Name</label>
+                            </div>
+                            <div class="form__group">
+                                <input type="email" class="form__input" id="email" placeholder="Email Address" required>
+                                <label for="email" class="form__label">Email Address</label>
+                            </div>
+
+                            <div class="form__group">
+                                <div class="form__radio-group">
+                                    <input type="radio" class="form__radio-input" id="help" name="query-type">
+                                    <label for="help" class="form__radio-label">
+                                        <span class="form__radio-button"></span>
+                                        Help
+                                    </label>
+                                </div>
+                                <div class="form__radio-group">
+                                    <input type="radio" class="form__radio-input" id="feedback" name="query-type">
+                                    <label for="feedback" class="form__radio-label">
+                                        <span class="form__radio-button"></span>
+                                        Feedback
+                                    </label>
+                                </div>
+                            </div>
+
+                            <div class="form__group u-margin-top-medium">
+                                <input type="submit" id="submit" value="Submit" class="btn btn--blue">
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+
+    <footer class="footer">
+        <div class="footer__logo-container">
+            <img src="/img/logo-light.png" class="footer__logo" alt="Logo">
+        </div>
+        <div class="row">
+            <div class="col-1-of-2">
+                <div class="footer__navigation">
+                    <ul class="footer__list">
+                        <li class="footer__item">
+                            <a href="#" class="footer__link">About</a>
+                        </li>
+                        <li class="footer__item">
+                            <a href="#" class="footer__link">Contact us</a>
+                        </li>
+                        <li class="footer__item">
+                            <a href="#" class="footer__link">Privacy policy</a>
+                        </li>
+                        <li class="footer__item">
+                            <a href="#" class="footer__link">Pricing</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-1-of-2">
+                <p class="footer__copyright">
+                    Developed by <a href="https://www.jorawarsinghs.com" class="footer__link">Jorawar Singh &copy;</a>
+                </p>
+            </div>
+        </div>
+    </footer>
     
     <!-- <section class="grid-test">
         <div class="row">
