--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 
     <footer class="footer">
         <div class="footer__logo-container">
-            <img src="/img/logo-light.png" class="footer__logo" alt="Logo">
+            <img src="img/logo-light.png" class="footer__logo" alt="Logo">
         </div>
         <div class="row">
             <div class="col-1-of-2">
