--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
         <!-- Testimonials -->
         <section class="section-testimonials">
             <div class="bg-video">
-                <video class="bg-video__content" autoplay muted loop>
+                <video class="bg-video__content" autoplay muted loop playsinline>
                     <source src="img/bg-video-2.mp4" type="video/mp4">
                         Video not supported by browser!
                 </video>
